Author overlap bug fixed

--- a/unusualbusiness/assets/styles/modules/_author.scss
+++ b/unusualbusiness/assets/styles/modules/_author.scss
@@ -5,7 +5,7 @@
 @import "../base/base";
 
 .author {
-  z-index: 5;
+  z-index: -1;
   position: relative;
   top: -272px;
   height: auto;
