--- a/unusualbusiness/assets/styles/modules/_upcoming-related-events.scss
+++ b/unusualbusiness/assets/styles/modules/_upcoming-related-events.scss
@@ -6,7 +6,7 @@
 @import "../base/sprite-mixins";
 
 .upcoming-related-events {
-  z-index: 4;
+  z-index: 10;
   padding: 0 $gutter;
   background-color: $blue;
 
